# src/main/scala/simex/dropoff/domain/endpoint/SimexMessageTransformer.scala
@@ -1,22 +1,22 @@
 package simex.dropoff.domain.endpoint
 
 import io.scalaland.chimney.dsl._
-import simex.guardrail.definitions.SimexMessageRequest
+import simex.guardrail.definitions.SimexMessage
 import simex.messaging.Simex
 
 import scala.util.Try
 
 object SimexMessageTransformer {
-  def transformRequest(request: SimexMessageRequest): Option[Simex] =
+  def transformRequest(request: SimexMessage): Option[Simex] =
     Try {
       request
         .into[Simex]
         .transform
     }.toOption
 
-  def transformDapexMessage(simexMessage: Simex): SimexMessageRequest =
+  def transformDapexMessage(simexMessage: Simex): SimexMessage =
     simexMessage
-      .into[SimexMessageRequest]
+      .into[SimexMessage]
       .transform
 
 }
